fix: show the vm password for the first run of the deployed vm

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -71,7 +71,6 @@
       "CONFIRM_EXPUNGE": "Вы уверены, что хотите уничтожить виртуальную машину?<br><b>Эта операция необратима.</b>",
       "CONFIRM_RECOVER": "Вы уверены, что хотите восстановить эту виртуальную машину?",
       "CONFIRM_RESET_PASSWORD": "Вы уверены, что хотите сбросить пароль?<br>Если ваша виртуальная машина запущена, то она будет перезагружена.",
-      "PASSWORD_DIALOG_MESSAGE": "Пароль для машины {{ vmName }} был сброшен в <b>{{ vmPassword }}</b>",
       "CONFIRM_DRIVES_DELETION": "Удалить диски с данными этой ВМ?",
       "CONFIRM_SAVE_PASSWORD": "Вы бы хотели автоматически сохранять пароли для всех ВМ?"
     },
@@ -1685,5 +1684,10 @@
       "true": "Да",
       "false": "Нет"
     }
+  },
+  "VM_PASSWORD": {
+    "VM_PASSWORD": "Пароль виртуальной машины",
+    "PASSWORD_HAS_BEEN_RESET": "Пароль для машины {{ vmName }} был сброшен",
+    "PASSWORD_HAS_BEEN_SET": "Пароль для машины {{ vmName }} установлен"
   }
 }
