feat(firewall-rules): Add support -1 (Any) value for ICMP IPv6 Type and Code

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1074,6 +1074,12 @@
       }
     },
     "ICMP_V6_TYPES": {
+      "-1": {
+        "description": "Any",
+        "codes": {
+          "-1": "Any"
+        }
+      },
       "1": {
         "description": "Destination Unreachable Message",
         "codes": {
