--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1070,6 +1070,12 @@
       }
     },
     "ICMP_V6_TYPES": {
+      "-1": {
+        "description": "Любой",
+        "codes": {
+          "-1": "Любой"
+        }
+      },
       "1": {
         "description": "Сообщение о недоступности назначения",
         "codes": {
