--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1440,6 +1440,10 @@
       "hour24": "24-Hours Time",
       "AUTO": "Auto",
       "THEME": "Theme Color"
+    },
+    "VM_PREFERENCES": {
+      "TITLE": "VM preferences",
+      "KEYBOARD_LAYOUT": "Keyboard layout"
     }
   },
   "CLIPBOARD": {
