--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1561,7 +1561,8 @@
     "TAG_KEY": "Ключ",
     "TAG_VALUE": "Значение",
     "TAG_ALREADY_EXISTS": "Тег уже существует",
-    "EDIT_TAG": "Редактировать тег"
+    "EDIT_TAG": "Редактировать тег",
+    "TAG_INVALID": "Значение не может начинаться с пробела"
   },
   "DISK_OFFERING_STORAGE_TYPE": {
     "SHARED": "Общее",
