--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1566,7 +1566,7 @@
     "TAG_VALUE": "Value",
     "TAG_ALREADY_EXISTS": "Tag already exists",
     "EDIT_TAG": "Edit tag",
-    "TAG_INVALID": "Value shouldn't started from space"
+    "TAG_START_FROM_SPACE": "Value shouldn't started from space"
   },
   "DISK_OFFERING_STORAGE_TYPE": {
     "SHARED": "Shared",
