Literal fix in en.json localization file (#1222)
* Update en.json

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -72,7 +72,7 @@
       "CONFIRM_RECOVER": "Are you sure you want to recover this virtual machine?",
       "CONFIRM_RESET_PASSWORD": "Are you sure you want to reset password?<br>If your Virtual Machine is running it will be rebooted.",
       "CONFIRM_DRIVES_DELETION": "Delete this VM's data drives?",
-      "CONFIRM_SAVE_PASSWORD": "Do you want to save a password for all VMs?"
+      "CONFIRM_SAVE_PASSWORD": "Do you want to always save passwords for newly created VMs?"
     },
     "SECURITY_GROUPS": {
       "CONFIRM_EDIT_FROM_VM": "This group is shared. Other VMs that use this group will also be affected. Are you sure you want to edit this group in the Security Group management area?",
