Update ru.json (#1227)
* Update ru.json

* Update ru.json

* Update ru.json

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -225,8 +225,8 @@
       "REMOVE_INSTANCE_GROUP_IN_PROGRESS": "Удаление группы",
       "REMOVE_INSTANCE_GROUP_DONE": "Группа удалена",
       "REMOVE_INSTANCE_GROUP_FAILED": "Не удалось удалить группу",
-      "ADD_SECONDARY_IP_DONE": "Дополнительный IP добавлен",
-      "REMOVE_SECONDARY_IP_DONE": "Дополнительный IP удален",
+      "ADD_SECONDARY_IP_DONE": "Дополнительный IPv4 добавлен",
+      "REMOVE_SECONDARY_IP_DONE": "Дополнительный IPv4 удален",
       "COLOR_CHANGE_DONE": "Цвет ВМ изменен",
       "CHANGE_SSH_IN_PROGRESS": "Изменение SSH-ключа",
       "CHANGE_SSH_DONE": "SSH-ключ изменен",
@@ -474,9 +474,9 @@
       "SPARE_DRIVE_ATTACHMENT": {
         "ATTACH_VOLUME": "Прикрепление диска",
         "SELECT_VOLUME": "Выберите диск",
-        "NO_AVAILABLE_VOLUMES_1": "Нет доступных запасных дисков. Нажмите, если вы хотите ",
+        "NO_AVAILABLE_VOLUMES_1": "Доступные дополнительные диски отсутствуют. Нажмите, если хотите ",
         "NO_AVAILABLE_VOLUMES_2": "создать новый",
-        "NO_AVAILABLE_VOLUMES_3": ", а не изменять размер одного из прикрепленных дисков",
+        "NO_AVAILABLE_VOLUMES_3": ".",
         "ATTACH": "Прикрепить"
       },
       "ISO": {
@@ -494,8 +494,8 @@
       "NIC_NAME": "Конфигурация NIC#{{ value }}",
       "IP": "IPv4",
       "IP_NA": "IP недоступен",
-      "ARE_YOU_SURE_ADD_SECONDARY_IP": "Вы уверены, что хотите добавить дополнительный IP?",
-      "ARE_YOU_SURE_REMOVE_SECONDARY_IP": "Вы уверены, что хотите удалить дополнительный IP?",
+      "ARE_YOU_SURE_ADD_SECONDARY_IP": "Вы уверены, что хотите добавить дополнительный IPv4?",
+      "ARE_YOU_SURE_REMOVE_SECONDARY_IP": "Вы уверены, что хотите удалить дополнительный IPv4?",
       "broadcastUri": "Broadcast URI",
       "gateway": "Шлюз v4",
       "ip6Address": "IPv6 адрес",
@@ -509,7 +509,7 @@
       "networkName": "Имя сети",
       "nsxLogicalSwitch": "NSX Logical Switch",
       "nsxLogicalSwitchPort": "NSX Logical Switch Port",
-      "secondaryIp": "Дополнительный IP",
+      "secondaryIp": "Дополнительный IPv4",
       "trafficType": "Тип трафика",
       "type": "Тип",
       "FIREWALL_RULES": "Правила брандмауэра",
