fix: add ssh vm tags and support them

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1398,7 +1398,7 @@
       "EDIT_USER": "Редактировать пользователя",
       "CHANGE_PASSWORD": "Изменить пароль",
       "CONFIRM_PASSWORD_ERROR": "Пароли не совпадают",
-      "USERNAME": "Имя аккаунта",
+      "USERNAME": "Имя пользователя",
       "PASSWORD": "Пароль",
       "CONFIRM_PASSWORD": "Подтвердить пароль",
       "FIRST_NAME": "Имя",
