--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1507,7 +1507,7 @@
     "CHOOSE_SERVICE_OFFERING": "Choose service offering",
     "NO_AVAILABLE_OFFERINGS": "No available offerings",
     "CPU_MHZ": "{{ count }}x{{ speed }} MHz",
-    "VM_WILL_BE_REBOOTED": "Virtual machine will be rebooted",
+    "VM_WILL_BE_RESTARTED": "Virtual machine will be restarted",
     "SHOW_ADDITIONAL_FIELDS": "Show additional fields",
     "HIDE_ADDITIONAL_FIELDS": "Hide additional fields",
     "CUSTOM_SERVICE_OFFERING": {
