--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1503,7 +1503,7 @@
     "CHOOSE_SERVICE_OFFERING": "Выберите предложение",
     "NO_AVAILABLE_OFFERINGS": "Нет доступных предложений",
     "CPU_MHZ": "{{ count }}x{{ speed }} МГц",
-    "VM_WILL_BE_REBOOTED": "Машина будет перезагружена",
+    "VM_WILL_BE_RESTARTED": "Машина будет перезагружена",
     "SHOW_ADDITIONAL_FIELDS": "Показать дополнительные параметры",
     "HIDE_ADDITIONAL_FIELDS": "Скрыть дополнительные параметры",
     "CUSTOM_SERVICE_OFFERING": {
