--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -552,7 +552,9 @@
       "DEPLOYMENT_FINISHED": "Развертывание завершено",
       "OS_TEMPLATE": "ОС шаблон",
       "NO_TEMPLATES": "Нет доступных шаблонов",
-      "NO_OFFERINGS": "Нет доступных сервисных предложений"
+      "NO_OFFERINGS": "Нет доступных сервисных предложений",
+      "GENERAL": "Основные",
+      "ADVANCED": "Дополнительные"
     }
   },
   "VM_POST_ACTION": {
