--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -580,14 +580,15 @@
     "CARD": {
       "DESCRIPTION": "Описание",
       "SIZE": "Размер",
-      "STATE": "Состояние"
+      "VM": "Виртуальная машина"
     },
     "SPARE_DRIVE_CREATION": {
       "TITLE": "Новый диск",
       "NAME": "Название",
       "ZONE": "Зона",
       "DISK_OFFERING": "Дисковое предложение",
-      "SIZE": "Размер"
+      "SIZE": "Размер",
+      "VM": "Виртуальная машина"
     },
     "SIDEBAR": {
       "VOLUME": "Диск",
@@ -600,6 +601,8 @@
       "DISK_OFFERING": "Дисковое предложение",
       "NAME": "Название",
       "CREATED": "Создано",
+      "STATE": "Состояние",
+      "VM": "Виртуальная машина",
       "name": "Название",
       "bytesreadrate": "Чтение МБайт/сек",
       "byteswriterate": "Запись МБайт/сек",
@@ -619,7 +622,8 @@
       "shared": "Общее",
       "created": "Создано",
       "true": "Да",
-      "false": "Нет"
+      "false": "Нет",
+      "local": "Локальное"
     },
     "SNAPSHOTS": {
       "DESCRIPTION": "Описание",
