feat(disk-offering): show all disk offerings when creating a data disk and show error message when chosen disk offering don't fit account resource limitations

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -114,7 +114,8 @@
       "PRIMARY_STORAGE_EXCEEDED": "Лимит основного хранилища превышен",
       "UNABLE_TO_FIND_PRIMARY_STORAGE": "Не удалось найти подходящее основное хранилище при создании диска {{ val1 }}",
       "VOLUME_BUSY": "На виртуальной машине, к которой прикреплен этот диск, уже выполняется другое действие над снимками. Повторите попытку позже.",
-      "VOLUME_LIMIT_EXCEEDED": "Лимит дисков превышен. Для создания новых дисков вам нужно удалить какие-либо из ранее созданных дисков."
+      "VOLUME_LIMIT_EXCEEDED": "Лимит дисков превышен. Для создания новых дисков вам нужно удалить какие-либо из ранее созданных дисков.",
+      "VOLUME_RESOURCES_LIMIT_EXCEEDED": "Диск не может быть выбран, так как его размер больше доступных для аккаунта ресурсов."
     },
     "SNAPSHOT_POLICIES": {
       "HOURLY_TURN_OFF": "Почасовое расписание отключено"
@@ -1687,6 +1688,7 @@
       "fat": "Полное",
       "sparse": "Разреженное",
       "shared": "Общее",
+      "local": "Локальное",
       "created": "Создано",
       "true": "Да",
       "false": "Нет"
