feat(settings): move "keyboard layout" from VM creation to Settings (#1220)
PR close #861

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -529,7 +529,6 @@
       "NO_GROUP": "Без группы",
       "AFFINITY_GROUP": "Аффинитетная группа",
       "SECURITY_GROUPS": "Брандмауэр",
-      "KEYBOARD_LAYOUT": "Раскладка клавиатуры",
       "KB_US": "Стандартная раскладка (США)",
       "KB_UK": "Английская раскладка (UK)",
       "KB_JP": "Японская раскладка",
@@ -1442,6 +1441,10 @@
       "hour24": "24-часовой формат",
       "AUTO": "Автоматически",
       "THEME": "Цвет темы"
+    },
+    "VM_PREFERENCES": {
+      "TITLE": "Настройки ВМ",
+      "KEYBOARD_LAYOUT": "Раскладка клавиатуры"
     }
   },
   "CLIPBOARD": {
