feat(service-offering): show all service offerings even those which don't fir account resource limitation

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -118,6 +118,9 @@
     },
     "SNAPSHOT_POLICIES": {
       "HOURLY_TURN_OFF": "Почасовое расписание отключено"
+    },
+    "COMPUTE_OFFERING": {
+      "RESOURCE_LIMIT_EXCEEDED": "Вычислительное предложение не может быть выбрано, потому что больше, чем доступные для аккаунта ресурсы."
     }
   },
   "NOTIFICATIONS": {
