--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -120,7 +120,7 @@
       "HOURLY_TURN_OFF": "Почасовое расписание отключено"
     },
     "COMPUTE_OFFERING": {
-      "RESOURCE_LIMIT_EXCEEDED": "Вычислительное предложение не может быть выбрано, потому что больше, чем доступные для аккаунта ресурсы."
+      "RESOURCE_LIMIT_EXCEEDED": "Вычислительное предложение не может быть выбрано. Размер выбранного предложения превышает доступные ресурсы аккаунта."
     }
   },
   "NOTIFICATIONS": {
