feat(vm-creation): vm creation dialog enhancements (#1292)
* feat(vm-creation): vm creation dialog enchancements

* feat(vm-creation): add description to config

* feat(vm-creation): rename default group in reducer

* fixes after angular updating

* update after removing keyboard

* fix lint

* fixes after review

* fixes after review

* fix style

* change conditional for slider showing

* after review

* fix bug

* remove maxRootDiskSize

* fix test

* fix test

* remove maxRootDiskSize from interface, rename const

* fix vm effects: if is Template then min value = template size, when is Iso with custom disk offering min value is 10

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -551,7 +551,9 @@
       "DEPLOYMENT_FINISHED": "Развертывание завершено",
       "OS_TEMPLATE": "ОС шаблон",
       "NO_TEMPLATES": "Нет доступных шаблонов",
-      "NO_OFFERINGS": "Нет доступных сервисных предложений"
+      "NO_OFFERINGS": "Нет доступных сервисных предложений",
+      "GENERAL": "Основные",
+      "ADVANCED": "Дополнительные"
     }
   },
   "VM_POST_ACTION": {
