--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -551,7 +551,9 @@
       "DEPLOYMENT_FINISHED": "Deployment finished",
       "OS_TEMPLATE": "OS template",
       "NO_TEMPLATES": "No templates available",
-      "NO_OFFERINGS": "No offerings available"
+      "NO_OFFERINGS": "No offerings available",
+      "GENERAL": "General",
+      "ADVANCED": "Advanced"
     }
   },
   "VM_POST_ACTION": {
