--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
@@ -150,7 +150,7 @@ msgid ""
 "master/config-guide.md#allow-reordering-sidenav>`_ for more information on "
 "configuring the navigation bar elements."
 msgstr ""
-"Слева находится главная навигационную панель. Она позволяет перемещаться от "
+"Слева находится главная навигационная панель. Она позволяет перемещаться от "
 "раздела к разделу. Навигационная панель формируется Администратором в "
 "конфигурационном файле (см. подробнее `руководство по конфигурациям <https://"
 "github.com/bwsw/cloudstack-ui/blob/master/config-guide.md#configure-"
