--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -279,6 +279,7 @@
     "ACTIVITY_LOG": "Activity log",
     "SSH_KEYS": "SSH keys",
     "ACCOUNTS": "Accounts",
+    "LOGS": "View logs",
     "SETTINGS": "Settings",
     "LOGOUT": "Logout",
     "LICENSE": {
@@ -300,7 +301,8 @@
       "CONSOLE": "Console",
       "WEB_SHELL": "WebShell",
       "VM_ACCESS": "Access VM",
-      "VM_ACCESS_TITLE": "Virtual Machine"
+      "VM_ACCESS_TITLE": "Virtual Machine",
+      "LOGS": "View logs"
     },
     "RESOURCE_USAGE": {
       "TITLE": "Resource usage",
