feat(vm-logs): show vm logs

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1423,6 +1423,11 @@
   "LOGS_PAGE": {
     "FILTERS": {
       "SELECT_VM": "Select a VM"
+    },
+    "LIST": {
+      "DATE": "Date",
+      "LOG_FILE": "Log file",
+      "TEXT": "Text"
     }
   },
   "SETTINGS": {
