feat(vm-logs): replace show logs icon button with text button

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1422,7 +1422,8 @@
   },
   "LOGS_PAGE": {
     "FILTERS": {
-      "SELECT_VM": "Select a VM"
+      "SELECT_VM": "Select a VM",
+      "SHOW_LOGS": "Show logs"
     },
     "LIST": {
       "DATE": "Date",
