feat(vm-logs): keyword filtering

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1423,6 +1423,7 @@
   "LOGS_PAGE": {
     "FILTERS": {
       "SELECT_VM": "Select a VM",
+      "KEYWORDS": "Keywords",
       "SHOW_LOGS": "Show logs"
     },
     "LIST": {
