lowercase url, check if url is invalid

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -108,6 +108,9 @@
     "VM": {
       "INSUFFICIENT_RESOURCES": "Недостаточно ресурсов"
     },
+    "VM_POST_ACTION": {
+      "INVALID_URL": "Неподдерживаемый URL. Проверьте значения, задаваемые в тэгах ВМ"
+    },
     "VOLUME": {
       "NAME_TOO_LONG": "Имя диска не может быть длиннее {{ val1 }} символов",
       "NEW_SIZE_IS_LOWER": "Новый размер меньше текущего, необходимо сжать диск",
