--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -108,6 +108,9 @@
     "VM": {
       "INSUFFICIENT_RESOURCES": "Insufficient resources"
     },
+    "VM_POST_ACTION": {
+      "INVALID_URL": "Invalid URL. You should check values in VM tags"
+    },
     "VOLUME": {
       "NAME_TOO_LONG": "Volume name cannot be longer than {{ val1 }} characters",
       "NEW_SIZE_IS_LOWER": "New size is lower than the current, you need to shrink the volume",
