--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -747,7 +747,8 @@
       "SELECT_ACCOUNTS": "Выберите аккаунты",
       "SELECT_TYPES": "Выберите типы",
       "GROUP_BY_TYPES": "Типам",
-      "GROUP_BY_ACCOUNTS": "Аккаунтам"
+      "GROUP_BY_ACCOUNTS": "Аккаунтам",
+      "SELECT_DATE": "Выберите дату"
     },
     "SIDEBAR": {
       "DETAILS": "Детали",
