--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1428,9 +1428,7 @@
       "KEYWORDS": "Keywords",
       "SHOW_LOGS": "Show logs",
       "START_DATE": "Start date",
-      "START_TIME": "",
-      "END_DATE": "End date",
-      "END_TIME": ""
+      "END_DATE": "End date"
     },
     "LIST": {
       "DATE": "Date",
