--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1424,9 +1424,7 @@
       "KEYWORDS": "Ключевые слова",
       "SHOW_LOGS": "Показать логи",
       "START_DATE": "Начальная дата",
-      "START_TIME": "",
-      "END_DATE": "Конечная дата",
-      "END_TIME": ""
+      "END_DATE": "Конечная дата"
     },
     "LIST": {
       "DATE": "Дата",
