--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -274,7 +274,7 @@
   },
   "NAVIGATION_SIDEBAR": {
     "WELCOME": "Здравствуйте, {{ name }}",
-    "VMS": "Виртуальные<br>машины",
+    "VMS": "Виртуальные машины",
     "STORAGE": "Хранилище",
     "IMAGES": "Образы",
     "SNAPSHOTS": "Снимки",
