feat(affinity-group): rework "affinity group" section in VM creation and VM details sidebar

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -72,7 +72,8 @@
       "CONFIRM_RECOVER": "Are you sure you want to recover this virtual machine?",
       "CONFIRM_RESET_PASSWORD": "Are you sure you want to reset password?<br>If your Virtual Machine is running it will be rebooted.",
       "CONFIRM_DRIVES_DELETION": "Delete this VM's data drives?",
-      "CONFIRM_SAVE_PASSWORD": "Do you want to always save passwords for newly created VMs?"
+      "CONFIRM_SAVE_PASSWORD": "Do you want to always save passwords for newly created VMs?",
+      "CONFIRM_AFFINITY_DELETION": "Are you sure you want to delete this affinity group?"
     },
     "SECURITY_GROUPS": {
       "CONFIRM_EDIT_FROM_VM": "This group is shared. Other VMs that use this group will also be affected. Are you sure you want to edit this group in the Security Group management area?",
@@ -1707,5 +1708,10 @@
     "VM_PASSWORD": "Virtual machine password",
     "PASSWORD_HAS_BEEN_RESET": "Password for {{ vmName }} has been reset",
     "PASSWORD_HAS_BEEN_SET": "Password for {{ vmName }} has been set"
+  },
+  "AFFINITY_GROUP": {
+    "NAME": "Name",
+    "TYPE": "Type",
+    "DESCRIPTION": "Description"
   }
 }
