--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -72,7 +72,8 @@
       "CONFIRM_RECOVER": "Вы уверены, что хотите восстановить эту виртуальную машину?",
       "CONFIRM_RESET_PASSWORD": "Вы уверены, что хотите сбросить пароль?<br>Если ваша виртуальная машина запущена, то она будет перезагружена.",
       "CONFIRM_DRIVES_DELETION": "Удалить диски с данными этой ВМ?",
-      "CONFIRM_SAVE_PASSWORD": "Вы бы хотели автоматически сохранять пароли для всех ВМ?"
+      "CONFIRM_SAVE_PASSWORD": "Вы бы хотели автоматически сохранять пароли для всех ВМ?",
+      "CONFIRM_AFFINITY_DELETION": "Вы уверены, что хотите удалить аффинитетную группу?"
     },
     "SECURITY_GROUPS": {
       "CONFIRM_EDIT_FROM_VM": "Эта группа - разделяемая. Другие виртуальные машины, которые её используют, так же будут затронуты. Вы уверены, что хотите изменить правила группы в разделе Брандмауэр?",
@@ -1703,5 +1704,10 @@
     "VM_PASSWORD": "Пароль виртуальной машины",
     "PASSWORD_HAS_BEEN_RESET": "Пароль для машины {{ vmName }} был сброшен",
     "PASSWORD_HAS_BEEN_SET": "Пароль для машины {{ vmName }} установлен"
+  },
+  "AFFINITY_GROUP": {
+    "NAME": "Имя",
+    "TYPE": "Тип",
+    "DESCRIPTION": "Описание"
   }
 }
