--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1424,7 +1424,8 @@
       "KEYWORDS": "Ключевые слова",
       "SHOW_LOGS": "Показать логи",
       "START_DATE": "Начальная дата",
-      "END_DATE": "Конечная дата"
+      "END_DATE": "Конечная дата",
+      "NEWEST_FIRST": "Свежие сверху"
     },
     "LIST": {
       "DATE": "Дата",
