fix newest first

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1438,7 +1438,7 @@
       "SHOW_LOGS": "Показать логи",
       "START_DATE": "Начальная дата",
       "END_DATE": "Конечная дата",
-      "NEWEST_FIRST": "Свежие сверху"
+      "NEWEST_FIRST": "Новые сверху"
     },
     "LIST": {
       "DATE": "Дата",
