--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1437,7 +1437,9 @@
       "KEYWORDS": "Ключевые слова",
       "SHOW_LOGS": "Показать логи",
       "START_DATE": "Начальная дата",
-      "END_DATE": "Конечная дата"
+      "END_DATE": "Конечная дата",
+      "LOG_FILE": "Журнал",
+      "LOG_FILE_NOT_SELECTED": "Не выбран"
     },
     "LIST": {
       "DATE": "Дата",
