feat(vm-logs): newest first (#1346)
* vm logs mock

* vm logs

* feat(vm-logs): show vm logs

* vm logs

* add tests

* fix action name

* fix selector name

* fix monospace text in column header

* feat(vm-logs): replace show logs icon button with text button

* feat(vm-logs): keyword filtering

* feat(vm-logs): save vm log keywords in query params

* feat(vm-logs): filter by dates

* feat(vm-logs): filter by dates

* v1.10.1

* fix tests

* fix version

* fix package.json

* sort by timestamp

* fix timestamp

* feat(vm-logs): filter vms by account

* refactor date picker label

* refactor labels

* refactor labels

* fix IE

* feat(vm-logs): newest first sorting

* add types

* add types

* fix newest first

* fix typings

* fix typings

* fix typings

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1437,7 +1437,8 @@
       "KEYWORDS": "Ключевые слова",
       "SHOW_LOGS": "Показать логи",
       "START_DATE": "Начальная дата",
-      "END_DATE": "Конечная дата"
+      "END_DATE": "Конечная дата",
+      "NEWEST_FIRST": "Новые сверху"
     },
     "LIST": {
       "DATE": "Дата",
