--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1442,6 +1442,8 @@
       "SHOW_LOGS": "Show logs",
       "START_DATE": "Start date",
       "END_DATE": "End date",
+      "LOG_FILE": "Log file",
+      "LOG_FILE_NOT_SELECTED": "Not selected",
       "NEWEST_FIRST": "Newest first"
     },
     "LIST": {
