feat(navigation): rework navigation menu (#1333)
PR close #1235

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -277,7 +277,7 @@
   },
   "NAVIGATION_SIDEBAR": {
     "WELCOME": "Здравствуйте, {{ name }}",
-    "VMS": "Виртуальные<br>машины",
+    "VMS": "Виртуальные машины",
     "STORAGE": "Хранилище",
     "IMAGES": "Образы",
     "SNAPSHOTS": "Снимки",
