fix(dialogs): fix vm creation and volume creation dialogs

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -732,8 +732,8 @@
       "IS_ROUTING": "Routing",
       "REQUIRES_HVM": "Requires HVM",
       "BOOTABLE": "Bootable",
-      "SHOW_ADDITIONAL": "Show additional fields",
-      "HIDE_ADDITIONAL": "Hide additional fields"
+      "SHOW_ADDITIONAL": "Show details",
+      "HIDE_ADDITIONAL": "Hide details"
     }
   },
   "SNAPSHOT_PAGE": {
